Lego Editor Change Log
2012/02/?? - 0.53

2012/02/19 - 0.52
  *  Fixed a bug with copy/paste of Legos that caused previously edited legos to change and 
		generally behave strangely when a lego was pasted multiple times. 
  *  Allow import of Legos even when schema validation fails
  *  Add proper validation to the pending concepts file (no duplicates, no overlap with real snomed 
		concepts)
  *  Fix a bug that was allowing users to inadvertently change the name associated with a PNCS.
  *  Fix the recently-used drop down selections so that they properly update when legos are imported 
		and deleted.
  *  Allow right click -> create new lego on the PNCS name level of the lego list tree.  Prepopulates
		the name into the create dialog.
  *  Added missing XML header information to Lego exports
  *  artf227457 Add live schema validation to editor

2012/02/12 - 0.51
  *  Improved type distinction between expression types during copy / paste
  *  artf227420 - fixed lucene sort order issues
  *  artf226891 Implemented the ability to store / search / use templates

2012/02/10 - 0.5
  *  Fixed null pointers that could happen with empty measurement values 
  *  Fixed a bug that caused a doubleclick to sometimes not open a lego for editing
  *  Fix memory leaks caused by javafx Bindings
  *  Add 'About Dialog' / version number
  *  Add more icons
  *  artf226891 (partial) Implemented Copy/Paste for Legos, Assertions, D / Q / V and Expressions 
		anywhere they appear
  *  artf227475 Allow rename of lego list
  *  artf227509 Fix consistency of 'pencil' icon in the left list of legos
  *  artf227507 Fixed bound change not allowing save bug